[build-system]
requires = ["setuptools>=69.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "asmu"
version = "0.0.1a2"
authors = [
    {name = "felhub", email = "felhub@net4us.at"},
]
description = "Acoustic Signal Measurement Utilities"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Multimedia :: Sound/Audio"
]
dependencies = [
    "numpy>=1.26.4",
    "scipy>=1.13.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1"
]

[project.urls]
Repository = "https://github.com/felhub/asmu"